--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "next": "12.1.6",
     "next-pwa": "^5.5.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "vercel": "^27.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
